ui/css/main.css
/* ... */
.midmenu_emptymsgbox {
	width:220px;
	height:auto;
	float:left;
	background:#d4d4d4 url(../images/midmenu_emptymsg.gif) repeat-x top left;
	margin:0 0 0 0;
	padding:0 0 10px 0;
	border-bottom:1px dashed #999;
}

.midmenu_emptymsgbox p{
	width:200px;
	height:auto;
	float:left;
	color:#666;
	font-size:11px;
	font-weight:bold;
	margin:10px 0 0 15px;
	padding:0;
}

.main_contentarea_with_midmenu {
	width:auto;
	min-height:1000px;
	height:auto;
	margin:0 0 0 221px;
	padding:0;

}

.main_contentarea_without_midmenu {
	width:auto;
	min-height:1000px;
	height:auto;
	margin:0 10px 0 10px;
	padding:0;

}

.main_title {
	width:100%;
	height:auto;
	float:left;
	margin:10px 0 0 10px;
	padding:0;
}

.main_titleicon {
	float:left;
	height:30px;
	margin:0 0 0 0;
	padding:0;
	width:34px;
}

.main_title h1 {
	width:auto;
	height:auto;
	float:left;
	text-align:left;
	color:#0d4861;
	font-size:14px;
	font-weight:normal;
	margin:8px 0 0 10px;
	display:inline;
	padding:0;
}

.contentbox {
	width:98%;
	height:auto;
	float:left;
	margin:10px 0 0 10px;
	display:inline;
	padding:0;
}

.tabbox {
	width:100%;
	height:auto;
	float:left;
	border-bottom:1px solid #efefef;
	margin:0;
	padding:0;
}

.content_tabs {
	width:101px;
	height:15px;
	float:left;
	font-size:11px;
	margin:0 0 0 2px;
	text-align:center;
	padding:6px 0 0 0;
	display:inline;

}

.content_tabs.on {
	background:url(../images/contenttab_selected.gif) no-repeat bottom left;
	color:#0d4861;


}

.content_tabs.off {
	background:url(../images/contenttab_unselected.gif) no-repeat bottom left;
	color:#FFF;
	cursor:pointer;
	cursor:hand;

}

.content_tabs.off:hover {
	background:url(../images/contenttab_unselected_hover.gif) no-repeat bottom left;
	color:#FFF;
	cursor:pointer;
	cursor:hand;
}

.rightpanel_mainloader_panel {
	width:100%;
	height:auto;
	float:left;
	margin:10px 0 0 0;
	padding:0;
}

.rightpanel_mainloaderbox {
	width:134px;
	height:22px;
	background:url(../images/right_loadingbg.png) no-repeat top left;
	margin:0 auto;
	padding:0;
}

.rightpanel_mainloaderbox p{
	width:auto;
	height:auto;
	float:left;
	color:#333;
	font-size:12px;
	font-weight:normal;
	margin:5px 10px 0 10px;
	display:inline;
	padding:0;
}
.rightpanel_mainloader_animatedicon {
	width:16px;
	height:16px;
	float:left;
	background:url(../images/leftmenu_loader.gif) no-repeat top left;
	margin:3px 0 0 25px;
	display:inline;
	padding:0;
}


.text_container {
	width:100%;
	height:auto;
	float:left;
	margin:7px 0 0 0;
	padding:0;
}

.grid_container {
	width:100%;
	height:auto;
	float:left;
	border:1px solid #CCC;
	margin:7px 0 0 0;
	padding:0;
}

.fixed_gridcontainer {
	width:100%;
	height:700px;
	float:left;
	overflow-y:scroll;
	overflow-y:auto;
	overflow-x:hidden;
	margin:0;
	padding:0;
}
.grid_rows {
	width:100%;
	height:auto;
	float:left;
	position:relative;
	margin:0;
	padding:5px 0 5px 0;
	border-bottom:1px solid #e2e2e2;
}



.grid_rows.even {
	background:#FFF repeat top left;
}

.grid_rows.success {
	background:#fffbe6 url(../images/infomsg_bg.gif) repeat-x top left;
}

.grid_rows.error {
	background:#ffe5e5 url(../images/errormsg_bg.gif) repeat-x top left;
}

.grid_rows.odd {
	background:#f3f3f3 repeat top left;
}

.grid_row_cell {
	height:auto;
	float:left;
	margin:0;
	padding:0;
	border-right:1px solid #fff;
}


.grid_row_cell .text {
	width:92%;
	height:16px;
	float:left;
	margin:0 0 0 10px;
	display:inline;
	padding:0 0 0 2px;
	border:1px solid #999;
	background:#FFF;
	color:#333;
	font-size:11px;
}
.grid_row_cell .error_text {
	width:92%;
	height:16px;
	float:left;
	margin:0 0 0 10px;
	display:inline;
	padding:0 0 0 2px;
	border:1px solid #999;
	background:#ffe5e5;
	color:#333;
	font-size:11px;
}

.errormsg {
	width:80%;
	height:auto;
	float:left;
	margin:3px 0 0 10px;
	display:inline;
	padding:0 0 0 2px;
	color:#a90000;
	font-size:11px;
	font-weight:normal;
}

.grid_row_cell .select {
	width:92%;
	height:18px;
	float:left;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
	border:1px solid #999;
	background:#FFF;
	color:#333;
	font-size:11px;
}

.gridrow_loaderbox {
	width:100%;
	height:23px;
	float:right;
	position:absolute;
	background:#99b2c3 url(../images/gridheader_loadingbg.gif) repeat-x top left;
	border-left:1px solid #999;
	margin:0 0 0 0;
	padding:0;
	z-index:1001;
	top:0;
	right:0;
}

.gridrow_loaderbox p{
	width:auto;
	height:auto;
	float:left;
	color:#FFF;
	font-size:11px;
	font-weight:bold;
	margin:5px 5px 0 5px;
	display:inline;
	padding:0;
}

.gridrow_loader {
	width:16px;
	height:16px;
	float:left;
	background:url(../images/grid_actionloader.gif) no-repeat top left;
	margin:3px 0 0 5px;
	display:inline;
	padding:0;
}

.row_celltitles {
	width:auto;
	height:auto;
	float:left;
	color:#333;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
}

.row_celltitles.status_red {
	width:auto;
	height:auto;
	float:left;
	color:#AB0202;
	text-align:left;
	font-size:11px;
	font-weight:bold;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
}

.row_celltitles.status_green {
	width:auto;
	height:auto;
	float:left;
	color:#538002;
	text-align:left;
	font-size:11px;
	font-weight:bold;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
}

.row_celltitles.status_gray {
	width:auto;
	height:auto;
	float:left;
	color:#666666;
	text-align:left;
	font-size:11px;
	font-weight:bold;
	margin:0 0 0 10px;
	display:inline;
	padding:0;
}

.row_celltitles.alert {
	width:100%;
	height:auto;
	float:left;
	color:#a90000;
	text-align:left;
	font-size:11px;
	font-weight:bold;
	margin:0;
	padding:0;
}

.row_celltitles.alertdetails {
	width:100%;
	height:auto;
	float:left;
	color:#5c5c5c;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	margin:6px 0 0 0;
	padding:0;
}


.row_celltitles a{
	width:auto;
	height:auto;
	color:#2c8bbc;
	text-decoration:none;
	margin:0;
	padding:0;
}

.row_celltitles a:link, row_celltitles a:visited {
	text-decoration:none;
}

.row_celltitles a:hover {
	text-decoration:underline;
}
/* ... */

